Testing with test Data, Turns out I forgot to add core-list when I was trying to use core-list and was wondering why it was not working. Turns out you really can not code while your sick.

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/core-menu/core-menu.html">
 <link rel="import" href="../bower_components/core-item/core-item.html">
+<link rel="import" href="../bower_components/core-list/core-list.html">
 <link rel="import" href="../bower_components/google-sheets/google-sheets.html">
 
 <!-- Add your elements here -->
