--- a/app/elements/app-theme.html
+++ b/app/elements/app-theme.html
@@ -21,11 +21,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 /* Application theme */
 
 :root {
-    --dark-primary-color: #303F9F;
-    --default-primary-color:#3F51B5;
-    --light-primary-color: #C5CAE9;
+    --dark-primary-color: #084962;
+    --default-primary-color:#00b1bc;
+    --light-primary-color: #BBDEFB;
     --text-primary-color: #ffffff; /*text/icons*/
-    --accent-color: #FF4081;
+    --accent-color: #536dfe;
     --primary-background-color: #c5cae9;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
