--- a/app/elements/app-theme.html
+++ b/app/elements/app-theme.html
@@ -20,29 +20,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 /* Application theme */
 
-:root {
-    --dark-primary-color: #084962;
-    --default-primary-color:#00b1bc;
-    --light-primary-color: #BBDEFB;
-    --text-primary-color: #ffffff; /*text/icons*/
-    --accent-color: #536dfe;
-    --primary-background-color: #c5cae9;
-    --primary-text-color: #212121;
-    --secondary-text-color: #727272;
-    --disabled-text-color: #bdbdbd;
-    --divider-color: #B6B6B6;
+  :root {
+    --dark-primary-color:       #0288D1;
+    --default-primary-color:    #03A9F4;
+    --light-primary-color:      #B3E5FC;
+    --text-primary-color:       #FFFFFF;
+    --accent-color:             #536DFE;
+    --primary-background-color: #B3E5FC;
+    --primary-text-color:       #212121;
+    --secondary-text-color:     #727272;
+    --disabled-text-color:      #BDBDBD;
+    --divider-color:            #B6B6B6;
+
 
     /* Components */
 
     /* paper-drawer-panel */
-    --drawer-menu-color: #ffffff;
-    --drawer-border-color: 1px solid #ccc;
+    --drawer-menu-color:           #ffffff;
+    --drawer-border-color:         1px solid #ccc;
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
-
     /* paper-menu */
     --paper-menu-background-color: #fff;
-    --menu-link-color: #111111;
-}
+    --menu-link-color:             #111111;
+  }
 
 /* General styles */
 
