--- a/app/elements/app-theme.html
+++ b/app/elements/app-theme.html
@@ -21,12 +21,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 /* Application theme */
 
   :root {
-    --dark-primary-color:       #0288D1;
-    --default-primary-color:    #03A9F4;
-    --light-primary-color:      #B3E5FC;
+    --dark-primary-color:       #0097A7;
+    --default-primary-color:    #00BCD4;
+    --light-primary-color:      #B2EBF2;
     --text-primary-color:       #FFFFFF;
     --accent-color:             #536DFE;
-    --primary-background-color: #B3E5FC;
+    --primary-background-color: #B2EBF2;
     --primary-text-color:       #212121;
     --secondary-text-color:     #727272;
     --disabled-text-color:      #BDBDBD;
@@ -39,9 +39,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --drawer-menu-color:           #ffffff;
     --drawer-border-color:         1px solid #ccc;
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
+
     /* paper-menu */
     --paper-menu-background-color: #fff;
     --menu-link-color:             #111111;
+
+    /* paper-input */
+   --paper-input-container-color:       rgba(255, 255, 255, 0.64);
+   --paper-input-container-focus-color: rgba(255, 255, 255, 1);
+   --paper-input-container-input-color: #fff;
+
+  /*  --paper-fab-background:        var(--default-primary-color);*/
   }
 
 /* General styles */
