The front page graph is in, and the cool thing is that it is pulling from a Google spreadsheet. Now it is time to move on to the actual porting of the old code and working on getting the new data in. It will be awesome. I can not wait to actually get stuff done on the good things.

--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <h1 class="paper-font-display1">
                   Welcome to the reporting Module.
                 </h1>
-              <div id="database-use" style="height: 300px"></div>
+              <div id="totalOnlineContent" style="height: 300px"></div>
               </paper-material>
              <paper-material>
              more stuff
@@ -197,6 +197,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="https://www.google.com/jsapi"></script>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="scripts/highcharts.js"></script>
+  <script src="http://code.highcharts.com/modules/data.js"></script>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
   <!-- endbuild-->
