Both of the front page graphs are finally working. I was missing a few bits of code to get the newer one working. It is not perfect, but I can fix the display issues later.  Now it is time to work on the display of the data and then the entering of the new data. This part is not going to be fun.

--- a/app/index.html
+++ b/app/index.html
@@ -117,10 +117,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <h1 class="paper-font-display1">
                   Welcome to the reporting Module.
                 </h1>
-              <div id="totalOnlineContent" style="height: 300px"></div>
+                <div id="totalOnlineContent" style="height: 400px"></div>
               </paper-material>
              <paper-material>
-             more stuff
+               <div id="totalTechHelp" style="height: 400px"></div>
              </paper-material>
             </section>
             <section data-route="circ">
