Working on a new theme for the graphs. Or rather just tossing in one of the stock ones. This should help going forward

--- a/app/index.html
+++ b/app/index.html
@@ -200,7 +200,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="http://code.highcharts.com/modules/data.js"></script>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
   <!-- build:js scripts/app.js -->
+  <script src="scripts/highcharts.theme.js"></script>
   <script src="scripts/app.js"></script>
+
   <!-- endbuild-->
 </body>
 
