--- a/app/elements/list-item/list-item.html
+++ b/app/elements/list-item/list-item.html
@@ -10,29 +10,28 @@
         min-width: 100%;
         min-height:5em;
       }
-      .listHeader{
-        padding:15px;
-        font-size:1.2em;
-      }
-      @media (max-width: 600px) {
-        h1.paper-font-display1 {
-          font-size: 24px;
-        }
-
-      }
     </style>
   <template>
-    <h1>Header of Beans</h1>
-      <div class="horizontal flex layout">
+    <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+      <thead>
+        <tr>
         <template is="dom-repeat" items="{{headers}}" as="head" index-as="head_no">
-        <div class="listHeader">{{head}}</div>
+          <th class="mdl-data-table__cell--non-numeric">{{head}}</th>
         </template>
-        <div class="horizontal flex layout">
-          <template is="dom-repeat" items="{{data}}" as="items" index-as="items_no">
-          <div class="listHeader">{{items.items_no}}</div>
+        </tr>
+      </thead>
+      <tbody>
+        <template is="dom-repeat" items="{{body}}" as="bodyData">
+          <tr>
+          <template is="dom-repeat" items="{{bodyData}}" as="item">
+            <td>
+              {{item}}{{bodyData}}
+            </td>
           </template>
-        </div>
-      </div>
+          </tr>
+        </template>
+      </tbody>
+    </table>
   </template>
 </dom-module>
 <script>
@@ -44,11 +43,9 @@
           type:Array,
           value:['Title','ISBN','Call Number','Date ','Summary']
         },
-        data:{
-          type:Object,
-          value:{
-            'Title':'Cool Beans','ISBN':'9781600067112','Call Number':'FIC MANGUM','Date':'2010','Summary':'Everything seems to be going perfectly for Maya Davis: She has a great job at a coffee shop, gets along with her parents, and is happily single. That is until her best friend starts dating Maya?s high school sweetheart. This funny, heartwarming fiction story by best-selling author Erynn Mangum uses the power of story to challenge teens to discover the relevance of faith in their relationships and their lives.'
-          }
+        body:{
+          type:Array,
+          value:[['Cool Beans','9781600067112','FIC MANGUM','2010','Everything seems to be going perfectly for Maya Davis: She has a great job at a coffee shop, gets along with her parents, and is happily single. That is until her best friend starts dating Maya?s high school sweetheart. This funny, heartwarming fiction story by best-selling author Erynn Mangum uses the power of story to challenge teens to discover the relevance of faith in their relationships and their lives.'],['Cool Beans','9781600067112','FIC MANGUM','2010','Everything seems to be going perfectly for Maya Davis: She has a great job at a coffee shop, gets along with her parents, and is happily single. That is until her best friend starts dating Maya?s high school sweetheart. This funny, heartwarming fiction story by best-selling author Erynn Mangum uses the power of story to challenge teens to discover the relevance of faith in their relationships and their lives.']]
         }
       }
     })
