--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -60,6 +60,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Add your elements here -->
 <link rel="import" href="../bower_components/highcharts-elements/highcharts-elements.html">
+<link rel="import" href="../bower_components/simple-material-table/simple-material-table.html">
 <link rel="import" href="list-item/list-item.html">
 
 <link rel="import" href="../styles/app-theme.html">
