Working on it from a different angle

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -25,6 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-slider/paper-slider.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-date-picker/paper-date-picker.html">
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
@@ -61,9 +62,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../bower_components/highcharts-elements/highcharts-elements.html">
 <link rel="import" href="../bower_components/simple-material-table/simple-material-table.html">
-<link rel="import" href="list-item/list-item.html">
 
-<link rel="import" href="../styles/app-theme.html">
+
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
@@ -72,3 +72,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
+<link rel="import" href="wpl-report/wpl-report.html">
