--- a/app/index.html
+++ b/app/index.html
@@ -148,12 +148,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <h2 class="paper-font-display2">Circulation Report</h2>
                 <div>
                   <form is="iron-form" id="circSort" method="get" class="horizontal flex layout center">
-                  <paper-input label="Start Date" data-dialog="dateDialog"></paper-input>
-                  <paper-input label="End Date" ></paper-input>
+                  <paper-input label="Start Date" value="September 2015" data-dialog="dateDialog" flex></paper-input>
+                  <!--<paper-slider min="1" max="24" value="1" width="" flex></paper-slider>-->
                   <paper-icon-button icon="arrow-forward"></paper-icon-button>
-
                 </form>
                 <list-item></list-item>
+                <wpl-report></wpl-report>
                 </div>
               </paper-material>
             </section>
